<resources>
    <string name="app_name">TripAdvisor</string>
    <string name="title_activity_ta_main">TripAdvisor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Inform</string>
    <string name="title_notifications">Others</string>
    <string name="title_activity_article">article</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_account">Sign in</string>
    <string name="email_hint">Enter email adrres</string>
    <string name="password_hint">Enter your password</string>
    <string name="new_acc">Create new account?</string>
    <string name="login">Log in</string>
    <string name="dktk">Dr.Daw Khin Than Kyi</string>
    <string name="sup">Supervisor</string>
    <string name="leader">Hplus(Team Leader)</string>
    <string name="web_chat">Web/ChatBot Developer</string>
    <string name="mkh">Min Khant Hein</string>
    <string name="rq_analyser">Requirement Analyser</string>
    <string name="karoo">Kar Oo</string>
    <string name="gd">UI/Graphic Designer</string>
    <string name="saw">Sawdarmalargay</string>
    <string name="tha">Thu Htoo Aung</string>
    <string name="developer">Android Developer</string>
    <string name="contact">Contact</string>
    <string name="reference">Credits To:</string>
    <string name="data_rq">Data Requirements from Travel By Naw Htike</string>
    <string name="picasso">Picasso Library</string>
    <string name="san">SanZtoU library(San Ko Ko-San Software Development)</string>
    <string name="tell">tell me&#8230;&#8230;</string>
    <string name="chk_ver">Application Versions</string>
    <string name="version">Your current version number is: 1.0</string>
    <string name="update">Updates:</string>
    <string name="dot">&#8230;&#8230;</string>
    <string name="not_verified">Email is not verified</string>
    <string name="verified">Email was verified</string>
    <string name="pull_down">Pull down to refresh</string>
    <string name="con_nue">Continue</string>
    <string name="feedback">Please Write Your Feedback Message</string>
    <string name="send">Send</string>
    <string name="historic">Historic Sites</string>
    <string name="font_change">Change Font</string>
    <string name="zawgyi">Zawgyi</string>
    <string name="unicode">Unicode</string>
    <string name="have_acc">Already have an account.Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="loading">loading</string>
    <string name="retry">Retry</string>
    <string name="log_out">Log Out</string>
    <string name="beaches">Beaches</string>
    <string name="mountain">Mountain Ranges</string>
    <string name="mingalar">MinGaLarPar</string>
    <string name="acc">account</string>
    <string name="setting">setting</string>
    <string name="feed">Feedback</string>
    <string name="about">About us</string>
    <string name="chk_version">Check Version</string>
    <string name="search">Search</string>
    <string name="readmore">Read More >></string>
    <string name="connect">connect</string>
    <string name="thank">Thank for using TripAdvisor Application.</string>
</resources>
