<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutus"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp">
    <LinearLayout
        android:id="@+id/sup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dktk"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sup"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/leader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leader"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/web_chat"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/minkhanthein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mkh"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rq_analyser"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/karoo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/karoo"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gd"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sawgay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saw"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rq_analyser"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tha"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#0000AA"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textSize="18sp"
            android:padding="5dp"
            android:textStyle="bold"/>
        <RelativeLayout
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fb"
            android:padding="5dp">
            <ImageView
                android:id="@+id/fblogo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/fb"
                android:contentDescription="@string/app_name"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_toRightOf="@+id/fblogo"
                android:layout_toEndOf="@+id/fblogo"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#0000AA"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reference"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_rq"
        android:layout_margin="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picasso"
        android:layout_margin="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/san"
        android:layout_margin="5dp"/>

</LinearLayout>