<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_margin="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/accpb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/lg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:src="@mipmap/logo"
                android:contentDescription="@string/app_name"/>
            <LinearLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:padding="20dp"
                    android:inputType="textEmailAddress"/>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:padding="20dp"
                    android:inputType="textPassword"/>
            </LinearLayout>
            <TextView
                android:id="@+id/acctv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_acc"
                android:layout_centerHorizontal="true"
                android:layout_above="@id/loginbtn"
                android:textColor="#000cbb"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>