<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting"
    android:background="#ffffff">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_change"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:id="@+id/zawgyi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp">
        <ImageButton
            android:id="@+id/zaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mark"
            android:background="#ffffff"
            android:visibility="invisible"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zawgyi"
            android:layout_gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/unicode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/zawgyi"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp">
        <ImageButton
            android:id="@+id/uni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mark"
            android:background="#ffffff"
            android:visibility="invisible"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unicode"
            android:layout_gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/fcw"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name" />
</RelativeLayout>