<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#ffffff"
        android:scrollbars="none"
        android:layout_above="@+id/connect">

    </ListView>
    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/connect"
        android:layout_above="@+id/chat"
        android:layout_centerHorizontal="true"
        android:background="@drawable/connect"
        android:textColor="#ffffff"/>
    <LinearLayout
        android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:background="#00B0FF"
        android:layout_margin="5dp">
        <EditText
            android:id="@+id/edi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/tell"
            android:inputType="text"
            android:textColorHint="#7C4DFF"
            android:layout_weight="2"
            android:background="#ffffff"
            android:layout_gravity="center"
            android:textSize="20sp"/>
        <ImageButton
            android:id="@+id/send"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_send"
            android:background="#00B0FF"
            android:contentDescription="@string/app_name" />
    </LinearLayout>
</RelativeLayout>