<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:id="@+id/historic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/historicsites"
                    android:contentDescription="@string/historic" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/historic"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>
                <ProgressBar
                    android:id="@+id/progress_bar_his"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/beaches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/historic"
            android:layout_marginTop="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/beaches"
                    android:contentDescription="@string/beaches" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beaches"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>
                <ProgressBar
                    android:id="@+id/progress_bar_bea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/mountain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/beaches"
            android:layout_marginTop="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/mountainranges"
                    android:contentDescription="@string/mountain" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mountain"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>
                <ProgressBar
                    android:id="@+id/progress_bar_mou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>